# serializer version: 1
# name: test_snapshot_extras_metadata[pylock.nab.toml]
  '''
  metadata-version: 2.3
  name: dep-with-extras
  version: 0.1.0
  requires-dist: fastapi[standard]>=0.115.12
  requires-dist: annotated-doc==0.0.4; extra == "pinned"
  requires-dist: annotated-types==0.7.0; extra == "pinned"
  requires-dist: anyio==4.14.1; extra == "pinned"
  requires-dist: certifi==2026.6.17; extra == "pinned"
  requires-dist: click==8.4.2; extra == "pinned"
  requires-dist: detect-installer==0.1.0; extra == "pinned"
  requires-dist: dnspython==2.8.0; extra == "pinned"
  requires-dist: email-validator==2.3.0; extra == "pinned"
  requires-dist: fastapi==0.139.0; extra == "pinned"
  requires-dist: fastapi-cli==0.0.29; extra == "pinned"
  requires-dist: fastapi-cloud-cli==0.22.1; extra == "pinned"
  requires-dist: fastar==0.11.0; extra == "pinned"
  requires-dist: h11==0.16.0; extra == "pinned"
  requires-dist: httpcore==1.0.9; extra == "pinned"
  requires-dist: httptools==0.8.0; extra == "pinned"
  requires-dist: httpx==0.28.1; extra == "pinned"
  requires-dist: idna==3.18; extra == "pinned"
  requires-dist: jinja2==3.1.6; extra == "pinned"
  requires-dist: markdown-it-py==4.2.0; extra == "pinned"
  requires-dist: markupsafe==3.0.3; extra == "pinned"
  requires-dist: mdurl==0.1.2; extra == "pinned"
  requires-dist: pydantic==2.13.4; extra == "pinned"
  requires-dist: pydantic-core==2.46.4; extra == "pinned"
  requires-dist: pydantic-extra-types==2.11.1; extra == "pinned"
  requires-dist: pydantic-settings==2.14.2; extra == "pinned"
  requires-dist: pygments==2.20.0; extra == "pinned"
  requires-dist: python-dotenv==1.2.2; extra == "pinned"
  requires-dist: python-multipart==0.0.32; extra == "pinned"
  requires-dist: pyyaml==6.0.3; extra == "pinned"
  requires-dist: rich==15.0.0; extra == "pinned"
  requires-dist: rich-toolkit==0.20.1; extra == "pinned"
  requires-dist: rignore==0.7.6; extra == "pinned"
  requires-dist: sentry-sdk==2.64.0; extra == "pinned"
  requires-dist: shellingham==1.5.4; extra == "pinned"
  requires-dist: starlette==1.3.1; extra == "pinned"
  requires-dist: typer==0.26.8; extra == "pinned"
  requires-dist: typing-extensions==4.16.0; extra == "pinned"
  requires-dist: typing-inspection==0.4.2; extra == "pinned"
  requires-dist: urllib3==2.7.0; extra == "pinned"
  requires-dist: uvicorn==0.51.0; extra == "pinned"
  requires-dist: uvloop==0.22.1; extra == "pinned"
  requires-dist: watchfiles==1.2.0; extra == "pinned"
  requires-dist: websockets==16.1; extra == "pinned"
  provides-extra: pinned
  
  
  '''
# ---
# name: test_snapshot_extras_metadata[pylock.pip.toml]
  '''
  metadata-version: 2.3
  name: dep-with-extras
  version: 0.1.0
  requires-dist: fastapi[standard]>=0.115.12
  requires-dist: annotated-doc==0.0.4; extra == "pinned"
  requires-dist: annotated-types==0.7.0; extra == "pinned"
  requires-dist: anyio==4.14.1; extra == "pinned"
  requires-dist: certifi==2026.6.17; extra == "pinned"
  requires-dist: click==8.4.2; extra == "pinned"
  requires-dist: detect-installer==0.1.0; extra == "pinned"
  requires-dist: dnspython==2.8.0; extra == "pinned"
  requires-dist: email-validator==2.3.0; extra == "pinned"
  requires-dist: fastapi==0.139.0; extra == "pinned"
  requires-dist: fastapi-cli==0.0.29; extra == "pinned"
  requires-dist: fastapi-cloud-cli==0.22.1; extra == "pinned"
  requires-dist: fastar==0.11.0; extra == "pinned"
  requires-dist: h11==0.16.0; extra == "pinned"
  requires-dist: httpcore==1.0.9; extra == "pinned"
  requires-dist: httptools==0.8.0; extra == "pinned"
  requires-dist: httpx==0.28.1; extra == "pinned"
  requires-dist: idna==3.18; extra == "pinned"
  requires-dist: jinja2==3.1.6; extra == "pinned"
  requires-dist: markdown-it-py==4.2.0; extra == "pinned"
  requires-dist: markupsafe==3.0.3; extra == "pinned"
  requires-dist: mdurl==0.1.2; extra == "pinned"
  requires-dist: pydantic==2.13.4; extra == "pinned"
  requires-dist: pydantic-core==2.46.4; extra == "pinned"
  requires-dist: pydantic-extra-types==2.11.1; extra == "pinned"
  requires-dist: pydantic-settings==2.14.2; extra == "pinned"
  requires-dist: pygments==2.20.0; extra == "pinned"
  requires-dist: python-dotenv==1.2.2; extra == "pinned"
  requires-dist: python-multipart==0.0.32; extra == "pinned"
  requires-dist: pyyaml==6.0.3; extra == "pinned"
  requires-dist: rich==15.0.0; extra == "pinned"
  requires-dist: rich-toolkit==0.20.1; extra == "pinned"
  requires-dist: rignore==0.7.6; extra == "pinned"
  requires-dist: sentry-sdk==2.64.0; extra == "pinned"
  requires-dist: shellingham==1.5.4; extra == "pinned"
  requires-dist: starlette==1.3.1; extra == "pinned"
  requires-dist: typer==0.26.8; extra == "pinned"
  requires-dist: typing-extensions==4.16.0; extra == "pinned"
  requires-dist: typing-inspection==0.4.2; extra == "pinned"
  requires-dist: urllib3==2.7.0; extra == "pinned"
  requires-dist: uvicorn==0.51.0; extra == "pinned"
  requires-dist: uvloop==0.22.1; extra == "pinned"
  requires-dist: watchfiles==1.2.0; extra == "pinned"
  requires-dist: websockets==16.1; extra == "pinned"
  provides-extra: pinned
  
  
  '''
# ---
# name: test_snapshot_extras_metadata[pylock.uv.toml]
  '''
  metadata-version: 2.3
  name: dep-with-extras
  version: 0.1.0
  requires-dist: fastapi[standard]>=0.115.12
  requires-dist: annotated-doc==0.0.4; extra == "pinned"
  requires-dist: annotated-types==0.7.0; extra == "pinned"
  requires-dist: anyio==4.12.1; python_full_version < "3.10" and extra == "pinned"
  requires-dist: anyio==4.14.1; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: certifi==2026.6.17; extra == "pinned"
  requires-dist: click==8.1.8; python_full_version < "3.10" and extra == "pinned"
  requires-dist: click==8.4.2; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: colorama==0.4.6; sys_platform == "win32" and extra == "pinned"
  requires-dist: detect-installer==0.1.0; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: dnspython==2.7.0; python_full_version < "3.10" and extra == "pinned"
  requires-dist: dnspython==2.8.0; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: email-validator==2.3.0; extra == "pinned"
  requires-dist: exceptiongroup==1.3.1; python_full_version < "3.11" and extra == "pinned"
  requires-dist: fastapi==0.128.8; python_full_version < "3.10" and extra == "pinned"
  requires-dist: fastapi==0.139.0; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: fastapi-cli==0.0.22; python_full_version < "3.10" and extra == "pinned"
  requires-dist: fastapi-cli==0.0.29; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: fastapi-cloud-cli==0.12.0; python_full_version < "3.10" and extra == "pinned"
  requires-dist: fastapi-cloud-cli==0.22.1; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: fastar==0.11.0; extra == "pinned"
  requires-dist: h11==0.16.0; extra == "pinned"
  requires-dist: httpcore==1.0.9; extra == "pinned"
  requires-dist: httptools==0.8.0; extra == "pinned"
  requires-dist: httpx==0.28.1; extra == "pinned"
  requires-dist: idna==3.18; extra == "pinned"
  requires-dist: jinja2==3.1.6; extra == "pinned"
  requires-dist: markdown-it-py==3.0.0; python_full_version < "3.10" and extra == "pinned"
  requires-dist: markdown-it-py==4.2.0; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: markupsafe==3.0.3; extra == "pinned"
  requires-dist: mdurl==0.1.2; extra == "pinned"
  requires-dist: pydantic==2.13.4; extra == "pinned"
  requires-dist: pydantic-core==2.46.4; extra == "pinned"
  requires-dist: pydantic-extra-types==2.11.1; extra == "pinned"
  requires-dist: pydantic-settings==2.11.0; python_full_version < "3.10" and extra == "pinned"
  requires-dist: pydantic-settings==2.14.2; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: pygments==2.20.0; extra == "pinned"
  requires-dist: python-dotenv==1.2.1; python_full_version < "3.10" and extra == "pinned"
  requires-dist: python-dotenv==1.2.2; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: python-multipart==0.0.20; python_full_version < "3.10" and extra == "pinned"
  requires-dist: python-multipart==0.0.32; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: pyyaml==6.0.3; extra == "pinned"
  requires-dist: rich==15.0.0; extra == "pinned"
  requires-dist: rich-toolkit==0.20.1; extra == "pinned"
  requires-dist: rignore==0.7.6; extra == "pinned"
  requires-dist: sentry-sdk==2.64.0; extra == "pinned"
  requires-dist: shellingham==1.5.4; extra == "pinned"
  requires-dist: starlette==0.49.3; python_full_version < "3.10" and extra == "pinned"
  requires-dist: starlette==1.3.1; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: tomli==2.4.1; python_full_version < "3.11" and extra == "pinned"
  requires-dist: typer==0.23.2; python_full_version < "3.10" and extra == "pinned"
  requires-dist: typer==0.26.8; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: typing-extensions==4.16.0; extra == "pinned"
  requires-dist: typing-inspection==0.4.2; extra == "pinned"
  requires-dist: urllib3==2.6.3; python_full_version < "3.10" and extra == "pinned"
  requires-dist: urllib3==2.7.0; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: uvicorn==0.39.0; python_full_version < "3.10" and extra == "pinned"
  requires-dist: uvicorn==0.51.0; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: uvloop==0.22.1; (platform_python_implementation != "PyPy" and sys_platform != "cygwin" and sys_platform != "win32") and extra == "pinned"
  requires-dist: watchfiles==1.1.1; python_full_version < "3.10" and extra == "pinned"
  requires-dist: watchfiles==1.2.0; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: websockets==15.0.1; python_full_version < "3.10" and extra == "pinned"
  requires-dist: websockets==16.1; python_full_version >= "3.10" and extra == "pinned"
  provides-extra: pinned
  
  
  '''
# ---
# name: test_snapshot_extras_metadata[uv.lock]
  '''
  metadata-version: 2.3
  name: dep-with-extras
  version: 0.1.0
  requires-dist: fastapi[standard]>=0.115.12
  requires-dist: annotated-doc==0.0.4; extra == "pinned"
  requires-dist: annotated-types==0.7.0; extra == "pinned"
  requires-dist: anyio==4.12.1; python_full_version < "3.10" and extra == "pinned"
  requires-dist: anyio==4.14.1; ((python_full_version >= "3.14" or python_full_version == "3.13.*") or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: certifi==2026.6.17; extra == "pinned"
  requires-dist: click==8.1.8; python_full_version < "3.10" and extra == "pinned"
  requires-dist: click==8.4.2; ((python_full_version >= "3.14" or python_full_version == "3.13.*") or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: colorama==0.4.6; sys_platform == "win32" and extra == "pinned"
  requires-dist: detect-installer==0.1.0; extra == "pinned"
  requires-dist: dnspython==2.7.0; python_full_version < "3.10" and extra == "pinned"
  requires-dist: dnspython==2.8.0; ((python_full_version >= "3.14" or python_full_version == "3.13.*") or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: email-validator==2.3.0; extra == "pinned"
  requires-dist: exceptiongroup==1.3.1; extra == "pinned"
  requires-dist: fastapi==0.128.8; python_full_version < "3.10" and extra == "pinned"
  requires-dist: fastapi==0.139.0; ((python_full_version >= "3.14" or python_full_version == "3.13.*") or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: fastapi-cli==0.0.22; python_full_version < "3.10" and extra == "pinned"
  requires-dist: fastapi-cli==0.0.29; ((python_full_version >= "3.14" or python_full_version == "3.13.*") or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: fastapi-cloud-cli==0.12.0; python_full_version < "3.10" and extra == "pinned"
  requires-dist: fastapi-cloud-cli==0.22.1; ((python_full_version >= "3.14" or python_full_version == "3.13.*") or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: fastar==0.11.0; extra == "pinned"
  requires-dist: h11==0.16.0; extra == "pinned"
  requires-dist: httpcore==1.0.9; extra == "pinned"
  requires-dist: httptools==0.8.0; extra == "pinned"
  requires-dist: httpx==0.28.1; extra == "pinned"
  requires-dist: idna==3.18; extra == "pinned"
  requires-dist: jinja2==3.1.6; extra == "pinned"
  requires-dist: markdown-it-py==3.0.0; python_full_version < "3.10" and extra == "pinned"
  requires-dist: markdown-it-py==4.2.0; ((python_full_version >= "3.14" or python_full_version == "3.13.*") or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: markupsafe==3.0.3; extra == "pinned"
  requires-dist: mdurl==0.1.2; extra == "pinned"
  requires-dist: pydantic==2.13.4; extra == "pinned"
  requires-dist: pydantic-core==2.46.4; extra == "pinned"
  requires-dist: pydantic-extra-types==2.11.1; extra == "pinned"
  requires-dist: pydantic-settings==2.11.0; python_full_version < "3.10" and extra == "pinned"
  requires-dist: pydantic-settings==2.14.2; ((python_full_version >= "3.14" or python_full_version == "3.13.*") or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: pygments==2.20.0; extra == "pinned"
  requires-dist: python-dotenv==1.2.1; python_full_version < "3.10" and extra == "pinned"
  requires-dist: python-dotenv==1.2.2; ((python_full_version >= "3.14" or python_full_version == "3.13.*") or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: python-multipart==0.0.20; python_full_version < "3.10" and extra == "pinned"
  requires-dist: python-multipart==0.0.32; ((python_full_version >= "3.14" or python_full_version == "3.13.*") or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: pyyaml==6.0.3; extra == "pinned"
  requires-dist: rich==15.0.0; extra == "pinned"
  requires-dist: rich-toolkit==0.20.1; extra == "pinned"
  requires-dist: rignore==0.7.6; extra == "pinned"
  requires-dist: sentry-sdk==2.64.0; extra == "pinned"
  requires-dist: shellingham==1.5.4; extra == "pinned"
  requires-dist: starlette==0.49.3; python_full_version < "3.10" and extra == "pinned"
  requires-dist: starlette==1.3.1; ((python_full_version >= "3.14" or python_full_version == "3.13.*") or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: tomli==2.4.1; extra == "pinned"
  requires-dist: typer==0.23.2; python_full_version < "3.10" and extra == "pinned"
  requires-dist: typer==0.26.8; ((python_full_version >= "3.14" or python_full_version == "3.13.*") or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: typing-extensions==4.16.0; extra == "pinned"
  requires-dist: typing-inspection==0.4.2; extra == "pinned"
  requires-dist: urllib3==2.6.3; python_full_version < "3.10" and extra == "pinned"
  requires-dist: urllib3==2.7.0; ((python_full_version >= "3.14" or python_full_version == "3.13.*") or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: uvicorn==0.39.0; python_full_version < "3.10" and extra == "pinned"
  requires-dist: uvicorn==0.51.0; ((python_full_version >= "3.14" or python_full_version == "3.13.*") or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: uvloop==0.22.1; ((platform_python_implementation != "PyPy" and sys_platform != "cygwin") and sys_platform != "win32") and extra == "pinned"
  requires-dist: watchfiles==1.1.1; python_full_version < "3.10" and extra == "pinned"
  requires-dist: watchfiles==1.2.0; ((python_full_version >= "3.14" or python_full_version == "3.13.*") or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: websockets==15.0.1; python_full_version < "3.10" and extra == "pinned"
  requires-dist: websockets==16.1; ((python_full_version >= "3.14" or python_full_version == "3.13.*") or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  provides-extra: pinned
  
  
  '''
# ---
# name: test_snapshot_project_metadata[pylock.nab.toml]
  '''
  metadata-version: 2.3
  name: project
  version: 0.1.0
  requires-dist: anyio>=4.5.2
  requires-dist: boto3>=1.36.15
  requires-dist: colorama; sys_platform == "win32"
  requires-dist: importlib-resources; python_version < "3.10"
  requires-dist: fastapi>=0.115.8
  requires-dist: click; extra == "cli"
  requires-dist: annotated-doc==0.0.4; extra == "pinned"
  requires-dist: annotated-types==0.7.0; extra == "pinned"
  requires-dist: anyio==4.5.2; python_version == "3.8" and extra == "pinned"
  requires-dist: anyio==4.12.1; python_version == "3.9" and extra == "pinned"
  requires-dist: anyio==4.14.1; (python_version == "3.10" or python_version == "3.11" or python_version == "3.12" or python_version == "3.13" or python_version == "3.14" or python_version == "3.15") and extra == "pinned"
  requires-dist: boto3==1.37.38; python_version == "3.8" and extra == "pinned"
  requires-dist: boto3==1.42.97; python_version == "3.9" and extra == "pinned"
  requires-dist: boto3==1.43.46; (python_version == "3.10" or python_version == "3.11" or python_version == "3.12" or python_version == "3.13" or python_version == "3.14" or python_version == "3.15") and extra == "pinned"
  requires-dist: botocore==1.37.38; python_version == "3.8" and extra == "pinned"
  requires-dist: botocore==1.42.97; python_version == "3.9" and extra == "pinned"
  requires-dist: botocore==1.43.46; (python_version == "3.10" or python_version == "3.11" or python_version == "3.12" or python_version == "3.13" or python_version == "3.14" or python_version == "3.15") and extra == "pinned"
  requires-dist: colorama==0.4.6; sys_platform == "win32" and extra == "pinned"
  requires-dist: exceptiongroup==1.3.1; (python_version == "3.10" or python_version == "3.8" or python_version == "3.9") and extra == "pinned"
  requires-dist: fastapi==0.124.4; python_version == "3.8" and extra == "pinned"
  requires-dist: fastapi==0.128.8; python_version == "3.9" and extra == "pinned"
  requires-dist: fastapi==0.139.0; (python_version == "3.10" or python_version == "3.11" or python_version == "3.12" or python_version == "3.13" or python_version == "3.14" or python_version == "3.15") and extra == "pinned"
  requires-dist: idna==3.15; python_version == "3.8" and extra == "pinned"
  requires-dist: idna==3.18; (python_version == "3.10" or python_version == "3.11" or python_version == "3.12" or python_version == "3.13" or python_version == "3.14" or python_version == "3.15" or python_version == "3.9") and extra == "pinned"
  requires-dist: importlib-resources==6.4.5; python_version == "3.8" and extra == "pinned"
  requires-dist: importlib-resources==6.5.2; python_version == "3.9" and extra == "pinned"
  requires-dist: jmespath==1.0.1; python_version == "3.8" and extra == "pinned"
  requires-dist: jmespath==1.1.0; (python_version == "3.10" or python_version == "3.11" or python_version == "3.12" or python_version == "3.13" or python_version == "3.14" or python_version == "3.15" or python_version == "3.9") and extra == "pinned"
  requires-dist: pydantic==2.10.6; python_version == "3.8" and extra == "pinned"
  requires-dist: pydantic==2.13.4; (python_version == "3.10" or python_version == "3.11" or python_version == "3.12" or python_version == "3.13" or python_version == "3.14" or python_version == "3.15" or python_version == "3.9") and extra == "pinned"
  requires-dist: pydantic-core==2.27.2; python_version == "3.8" and extra == "pinned"
  requires-dist: pydantic-core==2.46.4; (python_version == "3.10" or python_version == "3.11" or python_version == "3.12" or python_version == "3.13" or python_version == "3.14" or python_version == "3.15" or python_version == "3.9") and extra == "pinned"
  requires-dist: python-dateutil==2.9.0.post0; extra == "pinned"
  requires-dist: s3transfer==0.11.5; python_version == "3.8" and extra == "pinned"
  requires-dist: s3transfer==0.16.1; python_version == "3.9" and extra == "pinned"
  requires-dist: s3transfer==0.19.1; (python_version == "3.10" or python_version == "3.11" or python_version == "3.12" or python_version == "3.13" or python_version == "3.14" or python_version == "3.15") and extra == "pinned"
  requires-dist: six==1.17.0; extra == "pinned"
  requires-dist: sniffio==1.3.1; python_version == "3.8" and extra == "pinned"
  requires-dist: starlette==0.44.0; python_version == "3.8" and extra == "pinned"
  requires-dist: starlette==0.49.3; python_version == "3.9" and extra == "pinned"
  requires-dist: starlette==1.3.1; (python_version == "3.10" or python_version == "3.11" or python_version == "3.12" or python_version == "3.13" or python_version == "3.14" or python_version == "3.15") and extra == "pinned"
  requires-dist: typing-extensions==4.13.2; python_version == "3.8" and extra == "pinned"
  requires-dist: typing-extensions==4.16.0; (python_version == "3.10" or python_version == "3.11" or python_version == "3.12" or python_version == "3.13" or python_version == "3.14" or python_version == "3.15" or python_version == "3.9") and extra == "pinned"
  requires-dist: typing-inspection==0.4.2; (python_version == "3.10" or python_version == "3.11" or python_version == "3.12" or python_version == "3.13" or python_version == "3.14" or python_version == "3.15" or python_version == "3.9") and extra == "pinned"
  requires-dist: urllib3==1.26.20; (python_version == "3.8" or python_version == "3.9") and extra == "pinned"
  requires-dist: urllib3==2.7.0; (python_version == "3.10" or python_version == "3.11" or python_version == "3.12" or python_version == "3.13" or python_version == "3.14" or python_version == "3.15") and extra == "pinned"
  requires-dist: zipp==3.20.2; python_version == "3.8" and extra == "pinned"
  requires-dist: zipp==3.23.1; python_version == "3.9" and extra == "pinned"
  provides-extra: cli
  provides-extra: pinned
  
  
  '''
# ---
# name: test_snapshot_project_metadata[pylock.pip.toml]
  '''
  metadata-version: 2.3
  name: project
  version: 0.1.0
  requires-dist: anyio>=4.5.2
  requires-dist: boto3>=1.36.15
  requires-dist: colorama; sys_platform == "win32"
  requires-dist: importlib-resources; python_version < "3.10"
  requires-dist: fastapi>=0.115.8
  requires-dist: click; extra == "cli"
  requires-dist: annotated-doc==0.0.4; extra == "pinned"
  requires-dist: annotated-types==0.7.0; extra == "pinned"
  requires-dist: anyio==4.14.1; extra == "pinned"
  requires-dist: boto3==1.43.46; extra == "pinned"
  requires-dist: botocore==1.43.46; extra == "pinned"
  requires-dist: fastapi==0.139.0; extra == "pinned"
  requires-dist: idna==3.18; extra == "pinned"
  requires-dist: jmespath==1.1.0; extra == "pinned"
  requires-dist: pydantic==2.13.4; extra == "pinned"
  requires-dist: pydantic-core==2.46.4; extra == "pinned"
  requires-dist: python-dateutil==2.9.0.post0; extra == "pinned"
  requires-dist: s3transfer==0.19.1; extra == "pinned"
  requires-dist: six==1.17.0; extra == "pinned"
  requires-dist: starlette==1.3.1; extra == "pinned"
  requires-dist: typing-extensions==4.16.0; extra == "pinned"
  requires-dist: typing-inspection==0.4.2; extra == "pinned"
  requires-dist: urllib3==2.7.0; extra == "pinned"
  provides-extra: cli
  provides-extra: pinned
  
  
  '''
# ---
# name: test_snapshot_project_metadata[pylock.uv.toml]
  '''
  metadata-version: 2.3
  name: project
  version: 0.1.0
  requires-dist: anyio>=4.5.2
  requires-dist: boto3>=1.36.15
  requires-dist: colorama; sys_platform == "win32"
  requires-dist: importlib-resources; python_version < "3.10"
  requires-dist: fastapi>=0.115.8
  requires-dist: click; extra == "cli"
  requires-dist: annotated-doc==0.0.4; extra == "pinned"
  requires-dist: annotated-types==0.7.0; extra == "pinned"
  requires-dist: anyio==4.5.2; python_full_version < "3.9" and extra == "pinned"
  requires-dist: anyio==4.12.1; python_full_version == "3.9.*" and extra == "pinned"
  requires-dist: anyio==4.14.1; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: boto3==1.37.38; python_full_version < "3.9" and extra == "pinned"
  requires-dist: boto3==1.42.97; python_full_version == "3.9.*" and extra == "pinned"
  requires-dist: boto3==1.43.46; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: botocore==1.37.38; python_full_version < "3.9" and extra == "pinned"
  requires-dist: botocore==1.42.97; python_full_version == "3.9.*" and extra == "pinned"
  requires-dist: botocore==1.43.46; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: colorama==0.4.6; sys_platform == "win32" and extra == "pinned"
  requires-dist: exceptiongroup==1.3.1; python_full_version < "3.11" and extra == "pinned"
  requires-dist: fastapi==0.124.4; python_full_version < "3.9" and extra == "pinned"
  requires-dist: fastapi==0.128.8; python_full_version == "3.9.*" and extra == "pinned"
  requires-dist: fastapi==0.139.0; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: idna==3.15; python_full_version < "3.9" and extra == "pinned"
  requires-dist: idna==3.18; python_full_version >= "3.9" and extra == "pinned"
  requires-dist: importlib-resources==6.4.5; python_full_version < "3.9" and extra == "pinned"
  requires-dist: importlib-resources==6.5.2; python_full_version == "3.9.*" and extra == "pinned"
  requires-dist: jmespath==1.0.1; python_full_version < "3.9" and extra == "pinned"
  requires-dist: jmespath==1.1.0; python_full_version >= "3.9" and extra == "pinned"
  requires-dist: pydantic==2.10.6; python_full_version < "3.9" and extra == "pinned"
  requires-dist: pydantic==2.13.4; python_full_version >= "3.9" and extra == "pinned"
  requires-dist: pydantic-core==2.27.2; python_full_version < "3.9" and extra == "pinned"
  requires-dist: pydantic-core==2.46.4; python_full_version >= "3.9" and extra == "pinned"
  requires-dist: python-dateutil==2.9.0.post0; extra == "pinned"
  requires-dist: s3transfer==0.11.5; python_full_version < "3.9" and extra == "pinned"
  requires-dist: s3transfer==0.16.1; python_full_version == "3.9.*" and extra == "pinned"
  requires-dist: s3transfer==0.19.1; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: six==1.17.0; extra == "pinned"
  requires-dist: sniffio==1.3.1; python_full_version < "3.9" and extra == "pinned"
  requires-dist: starlette==0.44.0; python_full_version < "3.9" and extra == "pinned"
  requires-dist: starlette==0.49.3; python_full_version == "3.9.*" and extra == "pinned"
  requires-dist: starlette==1.3.1; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: typing-extensions==4.13.2; python_full_version < "3.9" and extra == "pinned"
  requires-dist: typing-extensions==4.16.0; python_full_version >= "3.9" and extra == "pinned"
  requires-dist: typing-inspection==0.4.2; python_full_version >= "3.9" and extra == "pinned"
  requires-dist: urllib3==1.26.20; python_full_version < "3.10" and extra == "pinned"
  requires-dist: urllib3==2.7.0; python_full_version >= "3.10" and extra == "pinned"
  requires-dist: zipp==3.20.2; python_full_version < "3.9" and extra == "pinned"
  requires-dist: zipp==3.23.1; python_full_version == "3.9.*" and extra == "pinned"
  provides-extra: cli
  provides-extra: pinned
  
  
  '''
# ---
# name: test_snapshot_project_metadata[uv.lock]
  '''
  metadata-version: 2.3
  name: project
  version: 0.1.0
  requires-dist: anyio>=4.5.2
  requires-dist: boto3>=1.36.15
  requires-dist: colorama; sys_platform == "win32"
  requires-dist: importlib-resources; python_version < "3.10"
  requires-dist: fastapi>=0.115.8
  requires-dist: click; extra == "cli"
  requires-dist: annotated-doc==0.0.4; extra == "pinned"
  requires-dist: annotated-types==0.7.0; extra == "pinned"
  requires-dist: anyio==4.5.2; python_full_version < "3.9" and extra == "pinned"
  requires-dist: anyio==4.12.1; python_full_version == "3.9.*" and extra == "pinned"
  requires-dist: anyio==4.14.1; (python_full_version >= "3.13" or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: boto3==1.37.38; python_full_version < "3.9" and extra == "pinned"
  requires-dist: boto3==1.42.97; python_full_version == "3.9.*" and extra == "pinned"
  requires-dist: boto3==1.43.46; (python_full_version >= "3.13" or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: botocore==1.37.38; python_full_version < "3.9" and extra == "pinned"
  requires-dist: botocore==1.42.97; python_full_version == "3.9.*" and extra == "pinned"
  requires-dist: botocore==1.43.46; (python_full_version >= "3.13" or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: colorama==0.4.6; sys_platform == "win32" and extra == "pinned"
  requires-dist: exceptiongroup==1.3.1; extra == "pinned"
  requires-dist: fastapi==0.124.4; python_full_version < "3.9" and extra == "pinned"
  requires-dist: fastapi==0.128.8; python_full_version == "3.9.*" and extra == "pinned"
  requires-dist: fastapi==0.139.0; (python_full_version >= "3.13" or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: idna==3.15; python_full_version < "3.9" and extra == "pinned"
  requires-dist: idna==3.18; ((python_full_version >= "3.13" or (python_full_version >= "3.10" and python_full_version < "3.13")) or python_full_version == "3.9.*") and extra == "pinned"
  requires-dist: importlib-resources==6.4.5; (python_version < "3.10" and python_full_version < "3.9") and extra == "pinned"
  requires-dist: importlib-resources==6.5.2; (python_version < "3.10" and python_full_version == "3.9.*") and extra == "pinned"
  requires-dist: jmespath==1.0.1; python_full_version < "3.9" and extra == "pinned"
  requires-dist: jmespath==1.1.0; ((python_full_version >= "3.13" or (python_full_version >= "3.10" and python_full_version < "3.13")) or python_full_version == "3.9.*") and extra == "pinned"
  requires-dist: pydantic==2.10.6; python_full_version < "3.9" and extra == "pinned"
  requires-dist: pydantic==2.13.4; ((python_full_version >= "3.13" or (python_full_version >= "3.10" and python_full_version < "3.13")) or python_full_version == "3.9.*") and extra == "pinned"
  requires-dist: pydantic-core==2.27.2; python_full_version < "3.9" and extra == "pinned"
  requires-dist: pydantic-core==2.46.4; ((python_full_version >= "3.13" or (python_full_version >= "3.10" and python_full_version < "3.13")) or python_full_version == "3.9.*") and extra == "pinned"
  requires-dist: python-dateutil==2.9.0.post0; extra == "pinned"
  requires-dist: s3transfer==0.11.5; python_full_version < "3.9" and extra == "pinned"
  requires-dist: s3transfer==0.16.1; python_full_version == "3.9.*" and extra == "pinned"
  requires-dist: s3transfer==0.19.1; (python_full_version >= "3.13" or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: six==1.17.0; extra == "pinned"
  requires-dist: sniffio==1.3.1; extra == "pinned"
  requires-dist: starlette==0.44.0; python_full_version < "3.9" and extra == "pinned"
  requires-dist: starlette==0.49.3; python_full_version == "3.9.*" and extra == "pinned"
  requires-dist: starlette==1.3.1; (python_full_version >= "3.13" or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: typing-extensions==4.13.2; python_full_version < "3.9" and extra == "pinned"
  requires-dist: typing-extensions==4.16.0; ((python_full_version >= "3.13" or (python_full_version >= "3.10" and python_full_version < "3.13")) or python_full_version == "3.9.*") and extra == "pinned"
  requires-dist: typing-inspection==0.4.2; extra == "pinned"
  requires-dist: urllib3==1.26.20; (python_full_version == "3.9.*" or python_full_version < "3.9") and extra == "pinned"
  requires-dist: urllib3==2.7.0; (python_full_version >= "3.13" or (python_full_version >= "3.10" and python_full_version < "3.13")) and extra == "pinned"
  requires-dist: zipp==3.20.2; (python_version < "3.10" and python_full_version < "3.9") and extra == "pinned"
  requires-dist: zipp==3.23.1; (python_version < "3.10" and python_full_version == "3.9.*") and extra == "pinned"
  provides-extra: cli
  provides-extra: pinned
  
  
  '''
# ---
# name: test_snapshot_requests_metadata[pylock.nab.toml]
  '''
  metadata-version: 2.3
  name: requests
  version: 0.1.0
  requires-dist: requests~=2.32
  requires-dist: requests-cache~=1.2
  requires-dist: attrs==26.1.0; extra == "pinned"
  requires-dist: cattrs==26.1.0; extra == "pinned"
  requires-dist: certifi==2026.6.17; extra == "pinned"
  requires-dist: charset-normalizer==3.4.9; extra == "pinned"
  requires-dist: idna==3.18; extra == "pinned"
  requires-dist: platformdirs==4.10.0; extra == "pinned"
  requires-dist: requests==2.34.2; extra == "pinned"
  requires-dist: requests-cache==1.3.3; extra == "pinned"
  requires-dist: typing-extensions==4.16.0; extra == "pinned"
  requires-dist: url-normalize==3.0.0; extra == "pinned"
  requires-dist: urllib3==2.7.0; extra == "pinned"
  provides-extra: pinned
  
  
  '''
# ---
# name: test_snapshot_requests_metadata[pylock.pip.toml]
  '''
  metadata-version: 2.3
  name: requests
  version: 0.1.0
  requires-dist: requests~=2.32
  requires-dist: requests-cache~=1.2
  requires-dist: attrs==26.1.0; extra == "pinned"
  requires-dist: cattrs==26.1.0; extra == "pinned"
  requires-dist: certifi==2026.6.17; extra == "pinned"
  requires-dist: charset-normalizer==3.4.9; extra == "pinned"
  requires-dist: idna==3.18; extra == "pinned"
  requires-dist: platformdirs==4.10.0; extra == "pinned"
  requires-dist: requests==2.34.2; extra == "pinned"
  requires-dist: requests-cache==1.3.3; extra == "pinned"
  requires-dist: typing-extensions==4.16.0; extra == "pinned"
  requires-dist: url-normalize==3.0.0; extra == "pinned"
  requires-dist: urllib3==2.7.0; extra == "pinned"
  provides-extra: pinned
  
  
  '''
# ---
# name: test_snapshot_requests_metadata[pylock.uv.toml]
  '''
  metadata-version: 2.3
  name: requests
  version: 0.1.0
  requires-dist: requests~=2.32
  requires-dist: requests-cache~=1.2
  requires-dist: attrs==26.1.0; extra == "pinned"
  requires-dist: cattrs==26.1.0; extra == "pinned"
  requires-dist: certifi==2026.6.17; extra == "pinned"
  requires-dist: charset-normalizer==3.4.9; extra == "pinned"
  requires-dist: exceptiongroup==1.3.1; python_full_version < "3.11" and extra == "pinned"
  requires-dist: idna==3.18; extra == "pinned"
  requires-dist: platformdirs==4.10.0; extra == "pinned"
  requires-dist: requests==2.34.2; extra == "pinned"
  requires-dist: requests-cache==1.3.3; extra == "pinned"
  requires-dist: typing-extensions==4.16.0; extra == "pinned"
  requires-dist: url-normalize==3.0.0; extra == "pinned"
  requires-dist: urllib3==2.7.0; extra == "pinned"
  provides-extra: pinned
  
  
  '''
# ---
# name: test_snapshot_requests_metadata[uv.lock]
  '''
  metadata-version: 2.3
  name: requests
  version: 0.1.0
  requires-dist: requests~=2.32
  requires-dist: requests-cache~=1.2
  requires-dist: attrs==26.1.0; extra == "pinned"
  requires-dist: cattrs==26.1.0; extra == "pinned"
  requires-dist: certifi==2026.6.17; extra == "pinned"
  requires-dist: charset-normalizer==3.4.9; extra == "pinned"
  requires-dist: exceptiongroup==1.3.1; extra == "pinned"
  requires-dist: idna==3.18; extra == "pinned"
  requires-dist: platformdirs==4.10.0; extra == "pinned"
  requires-dist: requests==2.34.2; extra == "pinned"
  requires-dist: requests-cache==1.3.3; extra == "pinned"
  requires-dist: typing-extensions==4.16.0; extra == "pinned"
  requires-dist: url-normalize==3.0.0; extra == "pinned"
  requires-dist: urllib3==2.7.0; extra == "pinned"
  provides-extra: pinned
  
  
  '''
# ---
